# TestAnalysis

./: .gitignore  CMakeLists.txt  Makefile  README.md  analysis.bat  dummy.cpp  meson.build  resharper2sarif.deps.json  results.sarif  sample.sln
.github/workflows/: CodeQL.yml  c-cpp.yml  codeql-analysis.yml  main.yml  msvc-analysis.yml  msvc.yml  resharper-analysis.yml  shiftleft-analysis.yml  upload-sarif.yml
sample/: benchmark.cpp  benchmark.h  sample.cpp  sample.vcxproj  sample.vcxproj.filters
